--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         $body.append($bodyContainer)
 
         var newTweets = function () {
+          $(".bodyContainer").empty()
+
           var index = streams.home.length - 1;
           while(index >= 0){
             var tweet = streams.home[index];
